# audio-gateway

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml
docs/: engineering_standards.md
include/: audio_gateway.hpp  audio_hardware.h  audio_hardware.hpp  config.hpp
src/: alsa_impl.cpp  audio_gateway.cpp  main.cpp
tests/fuzz/: fuzz_alsa.cpp  fuzz_device.cpp
tests/unit/: test_hardware.cpp
